// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ EmptyStateCard ]] renders empty state card pattern with content supplied via slots 1`] = `
"<section class=\\"empty-state-card-shadow mx-auto flex w-full flex-wrap justify-center gap-x-4 gap-y-1 rounded-md border border-solid border-ink-200 bg-ink-300 px-0 py-6 md:flex-nowrap\\">
  <emptystatepicture-stub webp-image-path=\\"test-image-dir/test-image-file.png\\" png-image-path=\\"test-image-dir/test-image-file.png\\" svg-image-path=\\"\\" width=\\"w-auto\\" alt-text=\\"This page has no data\\" height=\\"h-17 md:h-20\\" image-classes=\\"md:mx-auto px-4 md:px-0 w-full md:w-auto\\"></emptystatepicture-stub>
  <div class=\\"text-left px-4 max-w-sm\\">
    <h3 class=\\"mt-4 text-base font-medium text-vanilla-100 md:mt-0\\">Test title</h3>
    <p class=\\"mt-2 text-sm leading-6 text-vanilla-400\\">Test subtitle</p>
    <div class=\\"mt-6\\">Action on!</div>
  </div>
</section>"
`;

exports[`[[ EmptyStateCard ]] renders the empty state card pattern 1`] = `
"<section class=\\"empty-state-card-shadow mx-auto flex w-full flex-wrap justify-center gap-x-4 gap-y-1 rounded-md border border-solid border-ink-200 bg-ink-300 px-0 py-6 md:flex-nowrap\\">
  <emptystatepicture-stub webp-image-path=\\"test-image-dir/test-image-file.png\\" png-image-path=\\"test-image-dir/test-image-file.png\\" svg-image-path=\\"\\" width=\\"w-auto\\" alt-text=\\"This page has no data\\" height=\\"h-17 md:h-20\\" image-classes=\\"md:mx-auto px-4 md:px-0 w-full md:w-auto\\"></emptystatepicture-stub>
  <div class=\\"text-left px-4 max-w-sm\\">
    <h3 class=\\"mt-4 text-base font-medium text-vanilla-100 md:mt-0\\">
      Test title
    </h3>
    <p class=\\"mt-2 text-sm leading-6 text-vanilla-400\\">
      Test subtitle
    </p>
    <!---->
  </div>
</section>"
`;
